--- a/3.Web_APIs_Advanced/coordinates/style.css
+++ b/3.Web_APIs_Advanced/coordinates/style.css
@@ -11,19 +11,15 @@ body {
 .horizontal {
   width: 100%;
   height: 1px;
-  top: 50%;
 }
 
 .vertical {
   width: 1px;
   height: 100%;
-  left: 50%;
 }
 
 .target {
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
 }
 
@@ -31,7 +27,5 @@ body {
   position: absolute;
   color: white;
   font-size: 38px;
-  top: 50%;
-  left: 50%;
-  transform: translate(20px, 20px);
+  margin: 20px;
 }
