--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1 {
 .header__saveBtn:hover {
   transform: scale(1.1);
   color: #5eb8ff;
+  transition: all 300ms ease-in;
 }
 
 .header__checkBox {
@@ -75,6 +76,7 @@ h1 {
 .header__resetBtn {
   font-size: 16px;
   color: #ffffff;
+  transition: all 300ms ease-in;
 }
 
 .header__resetBtn:hover {
@@ -88,22 +90,38 @@ h1 {
   overflow-y: auto;
 }
 
-.item__row {
+.item__row::after {
+  content: '';
+  display: block;
+  margin: auto;
+  width: 90%;
+  height: 1px; /* 구분선의 높이를 설정합니다. */
+  background-color: #ccc; /* 구분선의 색상을 여기에 지정해주세요 */
+}
+
+.item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 8px 24px;
   font-size: 16px;
-  position: relative; /* 부모 요소를 relative로 설정합니다. */
 }
 
-.item__row::after {
-  content: '';
-  position: absolute;
-  bottom: 0; /* 밑에 위치하도록 설정합니다. */
-  width: 90%;
-  height: 1px; /* 구분선의 높이를 설정합니다. */
-  background-color: #ccc; /* 구분선의 색상을 여기에 지정해주세요 */
+.item__left {
+  flex: 4;
+  text-align: start;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.item__name {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.item__middle {
+  flex: 5;
 }
 
 .item__left__checkBox {
@@ -121,6 +139,7 @@ h1 {
   font-size: 12px;
   background-color: #5eb8ff;
   border-radius: 100%;
+  transition: all 300ms ease-in;
 }
 
 .item__middle__plusBtn:hover {
@@ -134,6 +153,7 @@ h1 {
 
 .item__right__deleteBtn {
   font-size: 16px;
+  transition: all 300ms ease-in;
 }
 
 .item__right__deleteBtn:hover {
